--- a/index.html
+++ b/index.html
@@ -15,38 +15,211 @@
       </div>
     </div>
     <div class="container">
-        <div id="home"> 
-            <div class="title">
-                <div>
-                    <h1>
-                        SaaS App HTML Landing Page
-                   </h1>
-                </div>
-                <div>
-                    <p>
-                        Use Tivo to automate your marketing actions in order to reach a much larger audience
-
-                    </p>
-               </div>
-               <div>
-                   <button class="signup-btn"> SIGN UP</button>
-               </div>
-            </div>
-            <div class="title-graphic">
-                <img src="header-software-app.png" alt="">
-   
-            </div>
-       </div>
+      <div id="home">
+        <div class="title">
+          <div>
+            <h1>SaaS App HTML Landing Page</h1>
+          </div>
+          <div>
+            <p>
+              Use Tivo to automate your marketing actions in order to reach a
+              much larger audience
+            </p>
+          </div>
+          <div>
+            <button class="signup-btn">SIGN UP</button>
+          </div>
+        </div>
+        <div class="title-graphic">
+          <img src="header-software-app.png" alt="" />
+        </div>
+      </div>
     </div>
-    <svg class="header-frame" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 310"><defs><style>.cls-1{fill:#5E3DEE;}</style></defs><title>header-frame</title><path class="cls-1" d="M0,283.054c22.75,12.98,53.1,15.2,70.635,14.808,92.115-2.077,238.3-79.9,354.895-79.938,59.97-.019,106.17,18.059,141.58,34,47.778,21.511,47.778,21.511,90,38.938,28.418,11.731,85.344,26.169,152.992,17.971,68.127-8.255,115.933-34.963,166.492-67.393,37.467-24.032,148.6-112.008,171.753-127.963,27.951-19.26,87.771-81.155,180.71-89.341,72.016-6.343,105.479,12.388,157.434,35.467,69.73,30.976,168.93,92.28,256.514,89.405,100.992-3.315,140.276-41.7,177-64.9V0.24H0V283.054Z"></path></svg>
+    <svg
+      class="header-frame"
+      data-name="Layer 1"
+      xmlns="http://www.w3.org/2000/svg"
+      preserveAspectRatio="none"
+      viewBox="0 0 1920 310"
+    >
+      <defs>
+        <style>
+          .cls-1 {
+            fill: #5e3dee;
+          }
+        </style>
+      </defs>
+      <title>header-frame</title>
+      <path
+        class="cls-1"
+        d="M0,283.054c22.75,12.98,53.1,15.2,70.635,14.808,92.115-2.077,238.3-79.9,354.895-79.938,59.97-.019,106.17,18.059,141.58,34,47.778,21.511,47.778,21.511,90,38.938,28.418,11.731,85.344,26.169,152.992,17.971,68.127-8.255,115.933-34.963,166.492-67.393,37.467-24.032,148.6-112.008,171.753-127.963,27.951-19.26,87.771-81.155,180.71-89.341,72.016-6.343,105.479,12.388,157.434,35.467,69.73,30.976,168.93,92.28,256.514,89.405,100.992-3.315,140.276-41.7,177-64.9V0.24H0V283.054Z"
+      ></path>
+    </svg>
 
-    <div id="features">features content</div>
-    <div id="details">details content</div>
-    <div id="pricing">pricing content</div>
+    <div class="outer-container">
+      <div class="marketing">
+        <h2>Marketing Automation Will Bring More Qualified Leads</h2>
+      </div>
+      <div class="cards">
+        <div class="marketing-card">
+          <div>
+            <img src="description-1.png" />
+          </div>
+          <div class="title-text">Title</div>
+          <div class="soft">
+            It's very easy to start creating email lists for your marketing
+            actions. Just create your Tivo account
+          </div>
+        </div>
+        <div class="marketing-card">
+          <div>
+            <img src="description-1.png" />
+          </div>
+          <div class="title-text">Title</div>
+          <div class="soft">
+            It's very easy to start creating email lists for your marketing
+            actions. Just create your Tivo account
+          </div>
+        </div>
+        <div class="marketing-card">
+          <div>
+            <img src="description-1.png" />
+          </div>
+          <div class="title-text">Title</div>
+          <div class="soft">
+            It's very easy to start creating email lists for your marketing
+            actions. Just create your Tivo account
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div id="video">video content</div>
-    <div id="testimonials">testimonials content</div>
-    <div id="subscribe">subscribe content</div>
-    <div id="footer">footer content</div>
+    <div id="pricing">
+      <div class="price-title">
+        <h2>Pricing Options</h2>
+      </div>
+      <div class="price-cards">
+        <div class="price-card">
+          <div class="price-info">
+            <div class="plan">Basic</div>
+            <div class="price">$ 100</div>
+            <div class="trial">14 days trial</div>
+          </div>
+          <hr />
+          <ul class="features">
+            <li>Email Marketing Module</li>
+            <li>User Control Management</li>
+            <li>List Building And Cleaning</li>
+            <li>Collected Data Reports</li>
+            <li>Planning And Evaluation</li>
+          </ul>
+          <div class="action">
+            <button class="round-btn">Sign Up</button>
+          </div>
+        </div>
+        <div class="price-card">
+          <div class="price-info">
+            <div class="plan">PRO</div>
+            <div class="price">$ 100</div>
+            <div class="trial">14 days trial</div>
+          </div>
+          <hr />
+          <ul class="features">
+            <li>Email Marketing Module</li>
+            <li>User Control Management</li>
+            <li>List Building And Cleaning</li>
+            <li>Collected Data Reports</li>
+            <li>Planning And Evaluation</li>
+          </ul>
+          <div class="action">
+            <button class="round-btn">SIGN UP</button>
+          </div>
+        </div>
+        <div class="price-card">
+          <div class="price-info">
+            <div class="plan">BASIC</div>
+            <div class="price">$ 100</div>
+            <div class="trial">14 days trial</div>
+          </div>
+          <hr />
+          <ul class="features">
+            <li>Email Marketing Module</li>
+            <li>User Control Management</li>
+            <li>List Building And Cleaning</li>
+            <li>Collected Data Reports</li>
+            <li>Planning And Evaluation</li>
+          </ul>
+          <div class="action">
+            <button class="round-btn">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="testimonials">
+      <div class="profile-image">
+        <img src="testimonial-3.jpg" alt="" />
+      </div>
+      <div class="feedback">
+        <p>
+          Tivo is the best marketing automation app for small and medium sized
+          business. It understands the mindset of young entrepreneurs and
+          provides the necessary data for wise marketing decisions. Just give it
+          a try and you will definitely not regret spending your time.
+        </p>
+        <p class="name">Marsha Singer - Online Marketer</p>
+      </div>
+    </div>
+    <div id="subscribe">
+      <div class="subs-title">
+        <h2>Stay Updated With The Latest News To Get More Qualified Leads</h2>
+      </div>
+      <div class="form">
+        <div>
+            <input class="email" type="text" name="email" placeholder="Email">
+          </div>
+          <div class="agree">
+            <input  type="checkbox">  
+            I've read and agree to Tivo's written Privacy Policy and Terms Conditions
+          </div>
+          <div class="action">
+            <button class="subscribe round-btn"> Subscribe </button>
+          </div>
+      </div>
+         
+      </div>
+    </div>
+
+    <svg class="footer-frame" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 79"><defs><style>.cls-2{fill:#5E3DEE;}</style></defs><title>footer-frame</title><path class="cls-2" d="M0,72.427C143,12.138,255.5,4.577,328.644,7.943c147.721,6.8,183.881,60.242,320.83,53.737,143-6.793,167.826-68.128,293-60.9,109.095,6.3,115.68,54.364,225.251,57.319,113.58,3.064,138.8-47.711,251.189-41.8,104.012,5.474,109.713,50.4,197.369,46.572,89.549-3.91,124.375-52.563,227.622-50.155A338.646,338.646,0,0,1,1920,23.467V79.75H0V72.427Z" transform="translate(0 -0.188)"></path></svg>
+    <div class="container">
+
+        <div id="footer">
+              <div class="footer-section">
+                  <h3>About</h3>
+                We're passionate about designing and developing one of the best marketing apps in the market
+
+
+              </div>
+              <div class="footer-section rect">
+                <h3>Important Links</h3>
+                <ul>
+                    <li>Our business partners startupguide.com</li>
+                    <li>Our business partners startupguide.com</li>
+                </ul>
+
+            </div>
+            <div class="footer-section">
+                <h3>Contact</h3>
+                <ul>
+                    <li>22 Innovative, San Francisco, CA 94043, US</li>
+                    <li>contact@tivo.com www.tivo.com</li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <hr class="light-hr">
+            <p>copyright 2020</p>
+        </div>
+    </div>
   </body>
 </html>
