--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="bg-blue">
       <div id="menu">
-        <div id="logo">CoderDost</div>
-        <div class="menu-item">HOME</div>
-        <div class="menu-item">FEATURES</div>
-        <div class="menu-item">DETAILS</div>
-        <div class="menu-item">PRICING</div>
-        <div class="menu-item">VIDEO</div>
-        <div class="menu-item round-btn">LOGIN</div>
+        <div id="logo" class="bold clickable">CoderDost</div>
+        <div class="menu-item bold clickable">HOME</div>
+        <div class="menu-item bold clickable">FEATURES</div>
+        <div class="menu-item bold clickable">DETAILS</div>
+        <div class="menu-item bold clickable">PRICING</div>
+        <div class="menu-item bold clickable">VIDEO</div>
+        <div class="menu-item bold round-btn white-border clickable">LOGIN</div>
       </div>
     </div>
-    <div class="container">
+    <div class="bg-blue">
       <div id="home">
         <div class="title">
           <div>
@@ -27,7 +27,7 @@
             </p>
           </div>
           <div>
-            <button class="signup-btn">SIGN UP</button>
+            <button class="signup-btn bg-white font-blue clickable">SIGN UP</button>
           </div>
         </div>
         <div class="title-graphic">
@@ -56,7 +56,7 @@
       ></path>
     </svg>
 
-    <div class="outer-container">
+    <div class="outer-bg-blue">
       <div class="marketing">
         <h2>Marketing Automation Will Bring More Qualified Leads</h2>
       </div>
@@ -65,7 +65,7 @@
           <div>
             <img src="description-1.png" />
           </div>
-          <div class="title-text">Title</div>
+          <div class="title-text bold">Title</div>
           <div class="soft">
             It's very easy to start creating email lists for your marketing
             actions. Just create your Tivo account
@@ -75,7 +75,7 @@
           <div>
             <img src="description-1.png" />
           </div>
-          <div class="title-text">Title</div>
+          <div class="title-text bold">Title</div>
           <div class="soft">
             It's very easy to start creating email lists for your marketing
             actions. Just create your Tivo account
@@ -85,7 +85,7 @@
           <div>
             <img src="description-1.png" />
           </div>
-          <div class="title-text">Title</div>
+          <div class="title-text bold">Title</div>
           <div class="soft">
             It's very easy to start creating email lists for your marketing
             actions. Just create your Tivo account
@@ -101,7 +101,7 @@
       <div class="price-cards">
         <div class="price-card">
           <div class="price-info">
-            <div class="plan">Basic</div>
+            <div class="plan font-blue  bold">Basic</div>
             <div class="price">$ 100</div>
             <div class="trial">14 days trial</div>
           </div>
@@ -114,12 +114,12 @@
             <li>Planning And Evaluation</li>
           </ul>
           <div class="action">
-            <button class="round-btn">Sign Up</button>
+            <button class="round-btn bold bg-blue font-white clickable">Sign Up</button>
           </div>
         </div>
         <div class="price-card">
           <div class="price-info">
-            <div class="plan">PRO</div>
+            <div class="plan font-blue">PRO</div>
             <div class="price">$ 100</div>
             <div class="trial">14 days trial</div>
           </div>
@@ -132,12 +132,12 @@
             <li>Planning And Evaluation</li>
           </ul>
           <div class="action">
-            <button class="round-btn">SIGN UP</button>
+            <button class="round-btn bold bg-blue font-white clickable">SIGN UP</button>
           </div>
         </div>
         <div class="price-card">
           <div class="price-info">
-            <div class="plan">BASIC</div>
+            <div class="plan font-blue">BASIC</div>
             <div class="price">$ 100</div>
             <div class="trial">14 days trial</div>
           </div>
@@ -150,7 +150,7 @@
             <li>Planning And Evaluation</li>
           </ul>
           <div class="action">
-            <button class="round-btn">Sign Up</button>
+            <button class="round-btn bold bg-blue font-white clickable">Sign Up</button>
           </div>
         </div>
       </div>
@@ -167,7 +167,7 @@
           provides the necessary data for wise marketing decisions. Just give it
           a try and you will definitely not regret spending your time.
         </p>
-        <p class="name">Marsha Singer - Online Marketer</p>
+        <p class="name bold">Marsha Singer - Online Marketer</p>
       </div>
     </div>
     <div id="subscribe">
@@ -183,7 +183,7 @@
             I've read and agree to Tivo's written Privacy Policy and Terms Conditions
           </div>
           <div class="action">
-            <button class="subscribe round-btn"> Subscribe </button>
+            <button class="subscribe bold bg-blue font-white round-btn clickable"> Subscribe </button>
           </div>
       </div>
          
@@ -191,7 +191,7 @@
     </div>
 
     <svg class="footer-frame" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 79"><defs><style>.cls-2{fill:#5E3DEE;}</style></defs><title>footer-frame</title><path class="cls-2" d="M0,72.427C143,12.138,255.5,4.577,328.644,7.943c147.721,6.8,183.881,60.242,320.83,53.737,143-6.793,167.826-68.128,293-60.9,109.095,6.3,115.68,54.364,225.251,57.319,113.58,3.064,138.8-47.711,251.189-41.8,104.012,5.474,109.713,50.4,197.369,46.572,89.549-3.91,124.375-52.563,227.622-50.155A338.646,338.646,0,0,1,1920,23.467V79.75H0V72.427Z" transform="translate(0 -0.188)"></path></svg>
-    <div class="container">
+    <div class="bg-blue">
 
         <div id="footer">
               <div class="footer-section">
