--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   </head>
   <body>
     <div class="bg-blue">
@@ -107,11 +108,11 @@
           </div>
           <hr />
           <ul class="features">
-            <li>Email Marketing Module</li>
-            <li>User Control Management</li>
-            <li>List Building And Cleaning</li>
-            <li>Collected Data Reports</li>
-            <li>Planning And Evaluation</li>
+            <li><i class="fas fa-check font-blue"></i>Email Marketing Module</li>
+            <li><i class="fas fa-check font-blue"></i>User Control Management</li>
+            <li><i class="fas fa-times soft"></i>List Building And Cleaning</li>
+            <li><i class="fas fa-times soft"></i>Collected Data Reports</li>
+            <li><i class="fas fa-times soft"></i>Planning And Evaluation</li>
           </ul>
           <div class="action">
             <button class="round-btn bold bg-blue font-white clickable">Sign Up</button>
@@ -125,11 +126,11 @@
           </div>
           <hr />
           <ul class="features">
-            <li>Email Marketing Module</li>
-            <li>User Control Management</li>
-            <li>List Building And Cleaning</li>
-            <li>Collected Data Reports</li>
-            <li>Planning And Evaluation</li>
+            <li><i class="fas fa-check font-blue"></i>Email Marketing Module</li>
+            <li><i class="fas fa-check font-blue"></i>User Control Management</li>
+            <li><i class="fas fa-check font-blue"></i>List Building And Cleaning</li>
+            <li><i class="fas fa-times soft"></i>Collected Data Reports</li>
+            <li><i class="fas fa-times soft"></i>Planning And Evaluation</li>
           </ul>
           <div class="action">
             <button class="round-btn bold bg-blue font-white clickable">SIGN UP</button>
@@ -143,11 +144,11 @@
           </div>
           <hr />
           <ul class="features">
-            <li>Email Marketing Module</li>
-            <li>User Control Management</li>
-            <li>List Building And Cleaning</li>
-            <li>Collected Data Reports</li>
-            <li>Planning And Evaluation</li>
+            <li><i class="fas fa-check font-blue"></i>Email Marketing Module</li>
+            <li><i class="fas fa-check font-blue"></i>User Control Management</li>
+            <li><i class="fas fa-check font-blue"></i>List Building And Cleaning</li>
+            <li><i class="fas fa-check font-blue"></i>Collected Data Reports</li>
+            <li><i class="fas fa-check font-blue"></i>Planning And Evaluation</li>
           </ul>
           <div class="action">
             <button class="round-btn bold bg-blue font-white clickable">Sign Up</button>
@@ -190,6 +191,25 @@
       </div>
     </div>
 
+    <div class="social">
+      <div class="bg-blue clickable">
+        <i class="fab fa-facebook-f font-white"></i> 
+      </div>
+      <div class="bg-blue clickable">
+        <i class="fab fa-twitter font-white"></i> 
+      </div> 
+      <div class="bg-blue clickable">
+        <i class="fab fa-instagram font-white"></i> 
+      </div>
+      <div class="bg-blue clickable">
+        <i class="fab fa-pinterest-p font-white"></i> 
+      </div>
+      <div class="bg-blue clickable">
+        <i class="fab fa-linkedin font-white"></i> 
+      </div>
+
+    </div>
+
     <svg class="footer-frame" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 79"><defs><style>.cls-2{fill:#5E3DEE;}</style></defs><title>footer-frame</title><path class="cls-2" d="M0,72.427C143,12.138,255.5,4.577,328.644,7.943c147.721,6.8,183.881,60.242,320.83,53.737,143-6.793,167.826-68.128,293-60.9,109.095,6.3,115.68,54.364,225.251,57.319,113.58,3.064,138.8-47.711,251.189-41.8,104.012,5.474,109.713,50.4,197.369,46.572,89.549-3.91,124.375-52.563,227.622-50.155A338.646,338.646,0,0,1,1920,23.467V79.75H0V72.427Z" transform="translate(0 -0.188)"></path></svg>
     <div class="bg-blue">
 
@@ -211,8 +231,9 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <ul>
-                    <li>22 Innovative, San Francisco, CA 94043, US</li>
-                    <li>contact@tivo.com www.tivo.com</li>
+                    <li><i class="fas fa-map-marker-alt"></i>22 Innovative, San Francisco, CA 94043, US</li>
+                    <li><i class="fas fa-envelope"></i>contact@tivo.com
+                        <i class="fas fa-globe"></i> www.tivo.com</li>
                 </ul>
             </div>
         </div>
