--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="title-graphic">
-          <img src="header-software-app.png" alt="" />
+          <img src="images/header-software-app.png" alt="" />
         </div>
       </div>
     </div>
@@ -56,6 +56,44 @@
         d="M0,283.054c22.75,12.98,53.1,15.2,70.635,14.808,92.115-2.077,238.3-79.9,354.895-79.938,59.97-.019,106.17,18.059,141.58,34,47.778,21.511,47.778,21.511,90,38.938,28.418,11.731,85.344,26.169,152.992,17.971,68.127-8.255,115.933-34.963,166.492-67.393,37.467-24.032,148.6-112.008,171.753-127.963,27.951-19.26,87.771-81.155,180.71-89.341,72.016-6.343,105.479,12.388,157.434,35.467,69.73,30.976,168.93,92.28,256.514,89.405,100.992-3.315,140.276-41.7,177-64.9V0.24H0V283.054Z"
       ></path>
     </svg>
+    <div class="animation-container">
+      <div class="animated-logos">
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-1.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-2.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-3.png" alt="">
+        </div>
+         <div class="animated-logo"> 
+          <img src="images/customer-logo-4.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-5.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-6.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-1.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-2.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-3.png" alt="">
+        </div>
+         <div class="animated-logo"> 
+          <img src="images/customer-logo-4.png" alt="">
+        </div>
+        <div class="animated-logo"> 
+          <img src="images/customer-logo-5.png" alt="">
+        </div>
+    </div>
+    </div>
+    
 
     <div class="outer-bg-blue">
       <div class="marketing">
@@ -64,7 +102,7 @@
       <div class="cards">
         <div class="marketing-card">
           <div>
-            <img src="description-1.png" />
+            <img src="images/description-1.png" />
           </div>
           <div class="title-text bold">Title</div>
           <div class="soft">
@@ -74,7 +112,7 @@
         </div>
         <div class="marketing-card">
           <div>
-            <img src="description-1.png" />
+            <img src="images/description-1.png" />
           </div>
           <div class="title-text bold">Title</div>
           <div class="soft">
@@ -84,7 +122,7 @@
         </div>
         <div class="marketing-card">
           <div>
-            <img src="description-1.png" />
+            <img src="images/description-1.png" />
           </div>
           <div class="title-text bold">Title</div>
           <div class="soft">
@@ -159,7 +197,7 @@
 
     <div id="testimonials">
       <div class="profile-image">
-        <img src="testimonial-3.jpg" alt="" />
+        <img src="images/testimonial-3.jpg" alt="" />
       </div>
       <div class="feedback">
         <p>
