--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
   <body>
     <div class="bg-blue fixed">
       <div id="menu">
-        <div id="logo" class="bold clickable">CoderDost</div>
-        <div class="menu-item bold clickable">HOME</div>
-        <div class="menu-item bold clickable">FEATURES</div>
-        <div class="menu-item bold clickable">DETAILS</div>
-        <div class="menu-item bold clickable">PRICING</div>
-        <div class="menu-item bold clickable">VIDEO</div>
-        <div class="menu-item bold round-btn white-border clickable">LOGIN</div>
+        <div id="logo" class="bold clickable">CoderDost
+          <div id="menu-btn" onclick="toggleMenu()"><i class="fas fa-bars"></i></div>
+        </div>
+        <div id="menu-items" class="hide" style="display: contents;">
+          <div class="menu-item bold clickable" onclick="scrollToEl('home')">HOME</div>
+          <div class="menu-item bold clickable">FEATURES</div>
+          <div class="menu-item bold clickable" onclick="scrollToEl('pricing')">PRICING</div>
+          <div class="menu-item bold clickable" onclick="scrollToEl('testimonials')">TESTIMONIALS</div>
+          <div class="menu-item bold clickable" onclick="scrollToEl('subscribe')">SUBSCRIBE</div>
+          <div class="menu-item bold round-btn white-border clickable">LOGIN</div>
+
+        </div>
+
       </div>
     </div>
     <div class="bg-blue">
@@ -247,6 +253,9 @@
       </div>
 
     </div>
+    <div class="up bg-blue clickable" onclick="scrollToEl('home')">
+        <i class="fas fa-chevron-up font-white"></i>     
+    </div>
 
     <svg class="footer-frame" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 79"><defs><style>.cls-2{fill:#5E3DEE;}</style></defs><title>footer-frame</title><path class="cls-2" d="M0,72.427C143,12.138,255.5,4.577,328.644,7.943c147.721,6.8,183.881,60.242,320.83,53.737,143-6.793,167.826-68.128,293-60.9,109.095,6.3,115.68,54.364,225.251,57.319,113.58,3.064,138.8-47.711,251.189-41.8,104.012,5.474,109.713,50.4,197.369,46.572,89.549-3.91,124.375-52.563,227.622-50.155A338.646,338.646,0,0,1,1920,23.467V79.75H0V72.427Z" transform="translate(0 -0.188)"></path></svg>
     <div class="bg-blue">
@@ -280,5 +289,6 @@
             <p>copyright 2020</p>
         </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
